# solana-program-research

./: README.md
cpis-errors/: Anchor.toml
cpis-errors/programs/cpis-errors/: Cargo.toml
cpis-errors/programs/cpis-errors/src/: lib.rs
cpis-errors/tests/: cpis-errors.ts
destroy/: Anchor.toml
implementation/: Anchor.toml  package.json
implementation/programs/implementation/: Cargo.toml
implementation/programs/implementation/src/: lib.rs
implementation/programs/implementation/src/args/: mod.rs  relationship_args.rs  supplier_args.rs
implementation/programs/implementation/src/errors/: business_unit_errors.rs  mod.rs  relationship_errors.rs  supplier_errors.rs
implementation/programs/implementation/src/instructions/: assign_relationships.rs  create_business_unit.rs  create_relationship.rs  create_supplier.rs  mod.rs  update_business_unit.rs  update_supplier.rs
implementation/programs/implementation/src/instructions/business_unit_instructions/: create_business_unit.rs  mod.rs  update_business_unit.rs
implementation/programs/implementation/src/instructions/relationship_instructions/: create_relationship.rs  mod.rs
implementation/programs/implementation/src/state/: business_unit.rs  mod.rs  relationship.rs  supplier.rs
implementation/programs/implementation/src/utils/: mod.rs  name_seed.rs
implementation/tests/: implementation.ts
mint/: Anchor.toml
pdas/: Anchor.toml
research/: NFT Invoicing
research/cpipda/: Anchor.toml
research/cpis/: Anchor.toml
research/dApp/: Anchor.toml
research/pdas2/: Anchor.toml
research/realloc/: Anchor.toml
(+78 files in other folders)
